# AdventOfCode

./: .gitignore  CMakeLists.txt
2015/day1/: 2015d01p1.cpp  2015d01p2.cpp  CMakeLists.txt
2015/day3/: 2015d03p1.cpp  2015d03p2.cpp  CMakeLists.txt
2015/day6/: 2015d06p1.cpp  CMakeLists.txt  input.2.txt
day1/: CMakeLists.txt  day1_1.cpp  day1_2.cpp
day2/: CMakeLists.txt  day2_1.cpp
day3/: CMakeLists.txt  day3_1.cpp  day3_2.cpp
day4/: CMakeLists.txt  day4_1.cpp  day4_2.cpp
day5/: CMakeLists.txt  day5_1.cpp  day5_2.cpp
day6/: CMakeLists.txt  day6_1.cpp
